--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,3 @@
-www/*.html
-www/draft/*.html
-www/draft/*.js
-www/blog/*.html
-www/onepage/*.html
-www/widgets/lab*.js
-www/widgets/lab*-browser.html
-www/widgets/rt-module.js
-www/rss.xml
-www/examples/*
-!www/examples/.gitkeep
+.idea/
+.github/
 .DS_Store
-slides
-class/
-lectures/
-www/db.pickle
-www/pw.hash
-node_modules/
-package-lock.json
-src/__pycache__/
-__pycache__/
-infra/db.*.json
